--- a/vuepress/package.json
+++ b/vuepress/package.json
@@ -16,8 +16,11 @@
   "devDependencies": {
     "@vuepress/plugin-back-to-top": "^1.8.2",
     "@vuepress/plugin-medium-zoom": "^1.8.2",
+    "markdown-it": "^12.2.0",
+    "markdown-it-footnote": "^3.0.3",
     "vuepress": "^1.5.3",
     "vuepress-plugin-versioning": "^4.10.2",
     "vuepress-theme-titanium": "^4.9.0"
-  }
+  },
+  "dependencies": {}
 }
