Fixes for markdown-it plugins
- updated package.json by adding '--no-cache' to the dev script
- fixed configs options for markdown-it and plugins

--- a/vuepress/package.json
+++ b/vuepress/package.json
@@ -9,7 +9,7 @@
   ],
   "repository": "https://github.com/mojaloop/reference-architecture-doc",
   "scripts": {
-    "dev": "vuepress dev docs",
+    "dev": "vuepress dev docs --no-cache",
     "build": "vuepress build docs",
     "dep:check": "npx ncu -e 2",
     "dep:update": "npx ncu -u",
