--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@vuepress/plugin-medium-zoom": "^1.8.2",
     "markdown-it": "^12.2.0",
     "markdown-it-footnote": "^3.0.3",
-    "vuepress": "^1.5.3",
+    "markdown-it-multimd-table": "^4.1.0",
+    "npm-check-updates": "^11.8.3",
+    "vuepress": "^1.8.2",
     "vuepress-plugin-versioning": "^4.10.2",
     "vuepress-theme-titanium": "^4.9.0"
   },
